--- a/public/en/informations.html
+++ b/public/en/informations.html
@@ -1,133 +1,163 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>A propos</title>
-        <link rel="stylesheet" href="css/style-informations.css">
-        <link rel="icon" href="img/logo/favicon.png" type="image/x-icon">
+        <title>About</title>
+        <link rel="stylesheet" href="../css/style-informations.css">
+        <link rel="stylesheet" href="../css/style-common.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="icon" href="../img/logo/favicon.png" type="image/x-icon">
     </head>
     <body>
         <header class="header" id="myHeader">
             <div class="logo-area">
                 <a href="index.html" class="logo">
-                    <img class="logo-large" src="img/logo/facebook_cover_photo_1.png" alt="logo">
-                    <img class="logo-mobile" src="img/logo/logo-only.png" alt="logo">
+                    <img class="logo-large" src="../img/logo/facebook_cover_photo_1.png" alt="logo">
+                    <img class="logo-mobile" src="../img/logo/logo-only.png" alt="logo">
                 </a>
                 <button class="nav-hamburger">
-                    <img src="img/hamburger.png">
+                    <img src="../img/hamburger.png">
                 </button>
             </div>
             <div class="nav">
-                <div class="blank"></div>
                 <div class="nav-list">
-                    <a href="profil.html" class="profil">Mon profil</a>
-                    <a href="projets.html" class="project-page">Projets</a>
+                    <div class="select-language">
+                        <div class="selected-language en">
+                            English
+                            <i class="fa fa-chevron-down"></i>
+                        </div>
+                        <div class="language-list">
+                            <div class="language fr french">Français</div>
+                        </div>
+                    </div>
+                    <a href="profil.html" class="profil">Profile</a>
+                    <a href="projets.html" class="project-page">Projects</a>
                     <a href="contact.html" class="contact">Contact</a>
                 </div>
             </div>
             <div class="nav-mobile">
-                <a href="profil.html" class="profil">Mon profil</a>
-                <a href="projets.html" class="project-page">Projets</a>
+                <div class="select-language">
+                    <div class="selected-language en">
+                        English
+                        <i class="fa fa-chevron-down"></i>
+                    </div>
+                    <div class="language-list">
+                        <div class="language fr">Français</div>
+                    </div>
+                </div>
+                <a href="profil.html" class="profil">Profile</a>
+                <a href="projets.html" class="project-page">Projects</a>
                 <a href="contact.html" class="contact">Contact</a>
             </div>
         </header>
         <main class="content">
             <div class="terms-of-use">
-                <h1>Conditions générales d'utilisation</h1>
-                <h2>Date de dernière mise à jour : 28/08/2023</h2>
+                <h1>Terms and Conditions of use</h1>
+                <h2>Date of the last update : 28/08/2023</h2>
                 <p>
-                    Les présentes conditions générales d'utilisation sont conclues entre :<br>
+                    The present terms and conditions of use are concluded between:<br>
                     <br>
-                    - <strong>Monsieur Raphaël DURAND</strong>, propriétaire exclusif du présent site internet, ci-après « Moi » et « Nous ».<br>
+                    - <strong>Mister Raphaël DURAND</strong>, exclusive owner of the present website, hereinafter referred to as "Me" and "We".<br>
                     <br>
-                    D'une part,<br>
+                    On the one hand,<br>
                     <br>
-                    - <strong>Toute personne physique majeure capable, ou toute personne morale,</strong> ci-après l’« Utilisateur »,<br>
+                    - <strong>Any natural person of legal age, or any legal entity,</strong> hereinafter referred to as the "User".<br>
                     <br>
-                    D'autre part,<br>
+                    On the other hand,<br>
                 </p>
-                <h2>Article 1</h2>
-                <h3>Généralités et consentement de l'utilisateur</h3>
+                <h2>Prelude</h2>
+                <h3>Disclaimer about the translation of the terms and conditions of use</h3>
                 <p>
-                    Les présentes CGU ou Conditions Générales d’Utilisation encadrent juridiquement 
-                    l’utilisation du site raphael-durand.fr (ci-après dénommé « le Site »).<br>
+                    The present Terms and Conditions of use are a translated version provided to the User to help her/him.<br>
+                    Any translated versions are not legally binding and cannot replace the French version.<br>
+                    In the event of disagreement or conflict, the French language legal agreements and policies shall prevail.
+                <h2>Article 1</h2>
+                <h3>Generalities and consent of the User</h3>
+                <p>
+                    The present Terms and Conditions of use provide a legal framework 
+                    for the use of the raphael-durand.fr website (hereinafter referred to as "the Website").<br>
                     <br>
-                    En utilisant le Site, l’Utilisateur reconnaît et confirme avoir lues, comprises et acceptées dans leur intégralité, 
-                    et sans réserve, l’ensemble des présents termes, 
-                    obligations et conditions d’utilisation, ci-après les « Conditions Générales ».<br>
+                    By using the Website, the User  acknowledges and confirms having read, understood and accepted in their entirety, 
+                    and without reservation, all of the present terms, obligations and conditions of use, hereinafter the "Terms of use".<br>
                     <br>
-                    Moi, Raphaël DURAND se réserve le droit de modifier les Conditions Générales, lesquelles prendront effet dès leur publication sur le Site.
-                    L’Utilisateur est invité à prendre connaissance des Conditions Générales à chaque fois qu’il utilise le Site, 
-                    sans qu’il soit nécessaire de l’en prévenir formellement.<br>
+                    Me, Raphaël DURAND reserves the right to modify the General Conditions, which will take effect as soon as they are published on the Site. 
+                    The User is invited to take note of the General Conditions each time he/she uses the Site, 
+                    without it being necessary to formally inform him/her of this.<br>
                 </p>
                 <h2>Article 2</h2>
-                <h3>Mentions légales</h3>
+                <h3>Legal information</h3>
                 <p>
-                    L’édition du Site est assurée par Moi, Raphaël DURAND à titre exclusif.<br>
+                    The Website is published exclusively by I, Raphaël DURAND.<br>
                     <br>
-                    L’hébergeur du site raphael-durand.fr est la société Hostinger, sise au <strong>Jonavos g. 60C, 44192, Lituanie.</strong><br>
+                    The raphael-durand.fr website is hosted by Hostinger, located at <strong>Jonavos g. 60C, 44192, Lituanie.</strong><br>
                 </p>
                 <h2>Article 3</h2>
-                <h3>Accès au site</h3>
+                <h3>Website access</h3>
                 <p>
-                    Le Site est accessible gratuitement depuis n’importe où par tout utilisateur disposant d’un accès à Internet. 
-                    Tous les frais nécessaires pour l’accès aux services (matériel informatique, connexion Internet…) sont à la charge de l’utilisateur. <br>
+                    The Website is accessible free of charge from anywhere by any user with Internet access. All costs necessary for access to the services 
+                    (computer hardware, Internet connection, etc.) are the responsibility of the User.<br>
                     <br>
-                    Pour des raisons de maintenance ou autres, l’accès au site peut être interrompu ou suspendu par l’éditeur sans préavis ni justification.<br>
+                    For maintenance or other reasons, access to the site may be interrupted or suspended by the publisher without notice or justification.<br>
                 </p>
                 <h2>Article 4</h2>
-                <h3>Collecte de données</h3>
+                <h3>Collection of data</h3>
                 <p>
-                    Le Site propose un formulaire de contact permettant de Nous écrire. Les informations demandées par le formulaire
-                    ne sont conservées que jusqu'à ce que le message soit traité. En aucun cas, ces informations ne sont utilisées dans un autre but que celui
-                    décrit dans cette article.<br>
+                    The Website provides a contact form for writing to Us. The information requested by the form is kept only until the message is processed. 
+                    Under no circumstances will this information be used for any purpose other than the described one in this article.<br>
                     <br>
-                    L'Utilisateur consent en remplissant le formulaire de contact à communiquer les informations demandées et a être recontacté via
-                    l'adresse électronique ainsi renseignée.<br>
+                    By filling in the contact form, the User agrees to communicate the information requested and to be contacted via the e-mail address thus provided.<br>
                     <br>
-                    Il est de la responsabilité de l'Utilisateur de ne pas communiquer d'informations que ce dernier désire garder pour lui.
+                    It is the User's responsibility to not communicate information that he/she wishes to keep to him/herself.
                 </p>
                 <h2>Article 5</h2>
-                <h3>Restriction d'utilisation et propriété intellectuelle</h3>
+                <h3>Restrictions on use and intellectual property</h3>
                 <p>
-                    Le Site propose un contenu utilisable à titre informatif uniquement. 
-                    Il est proscrit d'utiliser ce contenu sans autorisation, incluant entre autres le plagiat, la reproduction et la republication.<br>
+                    The Website offers content that may be used for information purposes only. 
+                    Unauthorized use of this content, including but not limited to plagiarism, reproduction and republication, is prohibited.<br>
                     <br>
-                    L'Utilisateur peut cependant utiliser le contenu à titre personnel et non-commercial sans en altérer le contenu, incluant en autres le copyright.<br>
+                    The User may, however, use the content for personal, non-commercial purposes without altering the content, including but not limited to copyright.<br>
                     <br>
-                    Le Site peut mettre en avant des logos et du contenu sous Copyright dont la propriété intellectuelle appartient à leurs auteurs respectifs.
-                    Tout usage de la propriété intellectuelle sans autorisation préalable est strictement interdit.
+                    The Website may feature copyrighted logos and content, the intellectual property of which belongs to their respective authors. 
+                    Any unauthorized use of intellectual property is strictly prohibited.
                 </p>
                 <h2>Article 6</h2>
-                <h3>Liens hypertextes menant vers des sites tiers</h3>
+                <h3>Hypertext links to third-party sites</h3>
                 <p>
-                    Le Site peut proposer à l'Utilisateur des liens hypertextes menant vers des sites externes.
-                    Par définition, donc, Nous ne contrôlons pas le contenu et les services que ces sites peuvent vous présenter.<br>
+                    The Website may provide the User with hypertext links to external sites. By definition, 
+                    We have no control over the content and services offered by these sites.<br>
                     <br>
-                    Les liens hypertextes ont pour seule vocation de mener l'Utilisateur vers du contenu externe susceptible de l'intéresser.
-                    En aucun cas, nous ne pouvons être associés ou être tenus responsable du contenu présent sur les sites webs relatifs à ces liens.
+                    The only purpose of hypertext links is to lead the User to external content that may interest him/her. 
+                    Under no circumstances may We be associated with or held responsible for the content of websites linked to our site.
                 </p>
                 <h2>Article 7</h2>
-                <h3>Clause de responsabilité</h3>
+                <h3>Liability clause</h3>
                 <p>
-                    En aucun cas, Moi Raphaël DURAND et le Site, ne peuvent être associé ou tenu responsable de dommages et troubles causés par la mauvaise
-                    interprétation ou utilisation par l'Utilisateur des informations présentent sur le Site.<br>
+                    Under no circumstances may Me Raphaël DURAND and the Website be associated with or held liable 
+                    for any damage or trouble caused by the User's misinterpretation or use of the information presented on the Website.<br>
                     <br>
-                    Il convient de la responsabilité de l'Utilisateur d'utiliser en adéquation les informations présentent sur le Site.
+                    It is the User's responsibility to make appropriate use of the information presented on the Website.
                 </p>
                 <h2>Article 8</h2>
+                <h3>Cookies</h3>
+                <p>
+                    The Website uses cookies to store the User's choices in terms of preferences.<br>
+                    These cookies are not used for commercial or advertising purposes, but solely to improve the User experience. 
+                    The User may receive a request for consent when visiting the Site. In addition, if the User accepts cookies, 
+                    he/she will be given a cookie which retains his/her consent for 12 months.
+                </p>
+                <h2>Article 9</h2>
                 <h3>Contact</h3>
                 <p>
-                    Si l'Utilisateur souhaite faire remonter une remarque ou une question vis à vis des Conditions Générales, 
-                    il peut nous contacter avec cet <strong><a class="contact-link" href="contact.html">onglet</a></strong>.
+                    If the User wishes to make a comment or ask a question about the terms of use, 
+                    he/she can contact us using <strong><a class="contact-link" href="contact.html">this tab</a></strong>.
                 </p>
             </div>
             <div class="fill"></div>
         </main>
         <footer class="footer">
             <div class="links">
-                <a href="informations.html">A propos</a>
+                <a href="informations.html">About</a>
                 <a href="https://www.linkedin.com/in/rapha%C3%ABl-durand-386720267/" target="_blank">LinkedIn</a>
             </div>
             <div class="adress-area">
@@ -135,24 +165,21 @@
             </div>
             <div class="help-area">
                 <a href="help.html" class="help">
-                    <img src="img/bouee.png" alt="help">
+                    <img src="../img/bouee.png" alt="help">
                 </a>
             </div>
         </footer>
-        <script>
-            window.onscroll = function() {myFunction()};
-            
-            var header = document.getElementById("myHeader");
-            var sticky = header.offsetTop;
-            
-            function myFunction() {
-              if (window.pageYOffset > sticky) {
-                header.classList.add("sticky");
-              } else {
-                header.classList.remove("sticky");
-              }
-            }
-        </script>
-        <script src="js/nav.js"></script>
+        <div class="cookie-consent">
+            <p class="cookie-consent-info">
+                This site uses internal cookies to store your preferences (language selection). <br>
+                We do not use third-party cookies, and cookies are not used for commercial purposes.
+            </p>
+            <div class="cookie-consent-check">
+                <button class="cookie-consent-refuse">I refuse</button>
+                <button class="cookie-consent-accept">I accept</button>
+            </div>
+        </div>
+        <script src="../js/nav.js"></script>
+        <script src="../js/cookie.js"></script>
     </body>
 </html>
