--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Bienvenue</title>
         <link rel="stylesheet" href="css/style-index.css">
+        <link rel="stylesheet" href="css/style-common.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="img/logo/favicon.png" type="image/x-icon">
     </head>
@@ -20,7 +21,6 @@
                 </button>
             </div>
             <div class="nav">
-                <div class="blank"></div>
                 <div class="nav-list">
                     <div class="select-language">
                         <div class="selected-language fr">
@@ -31,7 +31,7 @@
                             <div class="language en">English</div>
                         </div>
                     </div>
-                    <a href="profil.html" class="profil">Mon profil</a>
+                    <a href="profil.html" class="profil">Profil</a>
                     <a href="projets.html" class="project-page">Projets</a>
                     <a href="contact.html" class="contact">Contact</a>
                 </div>
@@ -46,7 +46,7 @@
                         <div class="language en">English</div>
                     </div>
                 </div>
-                <a href="profil.html" class="profil">Mon profil</a>
+                <a href="profil.html" class="profil">Profil</a>
                 <a href="projets.html" class="project-page">Projets</a>
                 <a href="contact.html" class="contact">Contact</a>
             </div>
