--- a/public/informations.html
+++ b/public/informations.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>A propos</title>
         <link rel="stylesheet" href="css/style-informations.css">
+        <link rel="stylesheet" href="css/style-common.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="icon" href="img/logo/favicon.png" type="image/x-icon">
     </head>
     <body>
@@ -19,15 +21,32 @@
                 </button>
             </div>
             <div class="nav">
-                <div class="blank"></div>
                 <div class="nav-list">
-                    <a href="profil.html" class="profil">Mon profil</a>
+                    <div class="select-language">
+                        <div class="selected-language fr">
+                            Français
+                            <i class="fa fa-chevron-down"></i>
+                        </div>
+                        <div class="language-list">
+                            <div class="language en">English</div>
+                        </div>
+                    </div>
+                    <a href="profil.html" class="profil">Profil</a>
                     <a href="projets.html" class="project-page">Projets</a>
                     <a href="contact.html" class="contact">Contact</a>
                 </div>
             </div>
             <div class="nav-mobile">
-                <a href="profil.html" class="profil">Mon profil</a>
+                <div class="select-language">
+                    <div class="selected-language fr">
+                        Français
+                        <i class="fa fa-chevron-down"></i>
+                    </div>
+                    <div class="language-list">
+                        <div class="language en">English</div>
+                    </div>
+                </div>
+                <a href="profil.html" class="profil">Profil</a>
                 <a href="projets.html" class="project-page">Projets</a>
                 <a href="contact.html" class="contact">Contact</a>
             </div>
@@ -117,6 +136,14 @@
                     Il convient de la responsabilité de l'Utilisateur d'utiliser en adéquation les informations présentent sur le Site.
                 </p>
                 <h2>Article 8</h2>
+                <h3>Cookies</h3>
+                <p>
+                    Le Site utilise des cookies pour conserver les choix de l'Utilisateur en terme de préférences.<br>
+                    Ces cookies ne sont pas utilisés à des fins commerciales ou publicitaires mais uniquement pour améliorer l'expérience utilisateur.
+                    L'Utilisateur pourra recevoir une demande de consentement en visitant le Site. Par ailleurs, si l'Utilisateur accepte les cookies, un cookie
+                    conservant son consentement pendant 12 mois lui sera remis. 
+                </p>
+                <h2>Article 9</h2>
                 <h3>Contact</h3>
                 <p>
                     Si l'Utilisateur souhaite faire remonter une remarque ou une question vis à vis des Conditions Générales, 
@@ -139,20 +166,17 @@
                 </a>
             </div>
         </footer>
-        <script>
-            window.onscroll = function() {myFunction()};
-            
-            var header = document.getElementById("myHeader");
-            var sticky = header.offsetTop;
-            
-            function myFunction() {
-              if (window.pageYOffset > sticky) {
-                header.classList.add("sticky");
-              } else {
-                header.classList.remove("sticky");
-              }
-            }
-        </script>
+        <div class="cookie-consent">
+            <p class="cookie-consent-info">
+                Ce site utilise des cookies internes pour conserver vos préférences (choix de langue). <br>
+                Nous n'utilisons pas de cookies tiers et les cookies ne sont pas utilisés à des fins commerciales.
+            </p>
+            <div class="cookie-consent-check">
+                <button class="cookie-consent-refuse">Je refuse</button>
+                <button class="cookie-consent-accept">J'accepte</button>
+            </div>
+        </div>
         <script src="js/nav.js"></script>
+        <script src="js/cookie.js"></script>
     </body>
 </html>
