début ajout photo

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                     </p>
                 </div>
                 <div class="presentation-picture">
-                    <img src="img/workinprogress.jpg" alt="photo">
+                    <img src="img/photo/left-color.png" alt="photo">
                 </div>
             </div>
             <div class="projects-area">
