--- a/public/profil.html
+++ b/public/profil.html
@@ -54,7 +54,7 @@
         <main class="content">
             <div class="presentation">
                 <div class="presentation-picture">
-                    <img src="img/workinprogress.jpg" alt="photo">
+                    <img src="img/photo/right-color.png" alt="photo">
                 </div>
                 <div class="presentation-info">
                     <p>
